--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
+				<a class="menu" href="#">Menu<span class="ion-navicon-round"></span></a>
 			</div>
 		</nav>
 
@@ -38,33 +39,53 @@
 			<h2>Portfolio</h2>
 			<span class="palitoazul"><span class="ion-android-star starblue"></span></span>
 			<div>
-				<img src="assets/cabin.png" alt="">
-				<img src="assets/cake.png" alt="">
-				<img src="assets/circus.png" alt="">
+				<div class="profile-conteiner">
+					<img src="assets/cabin.png" alt="">
+					<span class="ion-search"></span>
+				</div>
+				<div class="profile-conteiner">
+					<img src="assets/cake.png" alt="">
+					<span class="ion-search"></span>
+				</div>
+				<div class="profile-conteiner">
+					<img src="assets/circus.png" alt="">
+					<span class="ion-search"></span>
+				</div>
 			</div>
 
 			<div>
-				<img src="assets/game.png" alt="">
-				<img src="assets/safe.png" alt="">
-				<img src="assets/submarine.png" alt="">
+				<div class="profile-conteiner">
+					<img src="assets/game.png" alt="">
+					<span class="ion-search"></span>
+				</div>
+				<div class="profile-conteiner">
+					<img src="assets/safe.png" alt="">
+					<span class="ion-search"></span>
+				</div>
+				<div class="profile-conteiner">
+					<img src="assets/submarine.png" alt="">
+					<span class="ion-search"></span>
+				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="centrar">
-		<article>
-			<h2>About</h2>
-			<span class="palitoblanco"><span class="ion-android-star"></span></span>
-			<div class="about">
-				<div class="parrafo">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo labore tenetur, ratione. Eos incidunt dolor numquam expedita deserunt hic, fugiat tenetur architecto quibusdam natus dolorum rem, repellat, ducimus nesciunt nam.</p>
+		<div class="contenedor">
+			<article>
+				<h2>About</h2>
+				<span class="palitoblanco"><span class="ion-android-star"></span></span>
+				<div class="about">
+					<div class="parrafo">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo labore tenetur, ratione. Eos incidunt dolor numquam expedita deserunt hic, fugiat tenetur architecto quibusdam natus dolorum rem, repellat, ducimus nesciunt nam.</p>
+					</div>
+					<div class="parrafo">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione deleniti soluta, voluptatibus, rem eligendi enim non ut aspernatur atque nemo voluptatem suscipit laborum nostrum omnis doloribus. Necessitatibus, recusandae cum.</p>
+					</div>
 				</div>
-				<div class="parrafo">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione deleniti soluta, voluptatibus, rem eligendi enim non ut aspernatur atque nemo voluptatem suscipit laborum nostrum omnis doloribus. Necessitatibus, recusandae cum.</p>
-				</div>
-			</div>
-			<a href="#"><span class="ion-archive"></span>Download Theme</a>
-		</article>
+				<a href="#"><span class="ion-archive"></span>Download Theme</a>
+			</article>
+		</div>
 	</section>
 
 	<section class="centrardos">
